# cores

./: .gitignore  .gitmodules  Makefile  README.md  boards.txt  keywords.txt  meson.build  teensy-3.2-cross.txt  teensy-3.5-cross.txt
.github/: ISSUE_TEMPLATE.md
TOOLS MENU CHANGES/: boards.local.txt  platform.txt
arm/: boards.txt  platform.txt
arm/cores/arduino/: AudioStream.h  DMAChannel.h  HardwareSerial.h  Print.cpp  Print.h  WString.cpp  WString.h  avr_emulation.cpp  avr_emulation.h  core_pins.h  main.cpp  mk20dx128.c  mk20dx128.ld  mkl26z64.ld  pins_teensy.c  usb_desc.c  usb_desc.h  usb_dev.c  usb_midi.h  usb_serial.c  usb_undef.h  wiring.h
arm/cores/arduino/avr/: eeprom.h  io.h  pgmspace.h  power.h
arm/libraries/SPI/: SPI.cpp  SPI.h  keywords.txt  library.properties
avr/: boards.txt  platform.txt
avr/cores/arduino/: HardwareSerial.cpp  HardwareSerial.h  Printable.h  keylayouts.h  new.h  pins_arduino.h  pins_teensy.c
avr/variants/usb_disk/: media_internal.h  media_sdcard.h  pauls_ugly_debug.h  usb.c  usb_api.cpp  usb_private.h
avr/variants/usb_flightsim/: usb_api.h
avr/variants/usb_hid/: usb_api.cpp  usb_private.h
avr/variants/usb_midi/: usb_api.h  usb_private.h
avr/variants/usb_rawhid/: core_id.h  usb_api.cpp  usb_api.h  usb_private.h
avr/variants/usb_serial/: usb_api.cpp
avr/variants/usb_serial_hid/: usb.c  usb_api.h
nbproject/: Package-Default.bash  configurations.xml  project.xml
teensy/: CrashReport.cpp  CrashReport.h  FS.h  HardwareSerial.cpp  HardwareSerial.h  IPAddress.cpp  IPAddress.h  MIDIUSB.h  Mouse.h  Print.cpp  Print.h  SPIFIFO.h  Stream.cpp  Stream.h  Time.cpp  Udp.h  WMath.cpp  WProgram.h  WString.cpp  WString.h  core_id.h  core_pins.h  keylayouts.c  keylayouts.h  main.cpp  malloc.c  new.cpp  pins_arduino.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h  wiring.h  yield.cpp
teensy3/: Arduino.h  AudioStream.cpp  AudioStream.h  Client.h  CrashReport.cpp  CrashReport.h  DMAChannel.cpp  DMAChannel.h  EventResponder.cpp  EventResponder.h  FS.h  HardwareSerial.cpp  HardwareSerial.h  HardwareSerial1.cpp  HardwareSerial2.cpp  HardwareSerial3.cpp  HardwareSerial4.cpp  HardwareSerial5.cpp  HardwareSerial6.cpp  IPAddress.cpp  IPAddress.h  IntervalTimer.cpp  IntervalTimer.h  Keyboard.h  MIDIUSB.h  Makefile  Mouse.h  Print.cpp  Print.h  Printable.h  SPIFIFO.h  Server.h  Stream.cpp  Stream.h  Time.cpp  Tone.cpp  Udp.h  WCharacter.h  WConstants.h  WMath.cpp  (+97 more)
teensy3/avr/: eeprom.h  interrupt.h  pgmspace.h  sleep.h  wdt.h
teensy3/serlib/: serialEvent.c
teensy3/util/: atomic.h  delay.h
teensy4/: Arduino.h  AudioRate.h  AudioStream.cpp  AudioStream.h  Blink.cc  Client.h  CrashReport.cpp  CrashReport.h  DMAChannel.cpp  DMAChannel.h  DmaSerial.cpp  DmaSerial.h  EventResponder.cpp  EventResponder.h  FS.h  Hardfaults.cpp  HardwareSerial.cpp  HardwareSerial.h  HardwareSerial1.cpp  HardwareSerial2.cpp  HardwareSerial3.cpp  HardwareSerial4.cpp  HardwareSerial5.cpp  HardwareSerial6.cpp  HardwareSerial7.cpp  HardwareSerial8.cpp  IPAddress.cpp  IPAddress.h  IntervalTimer.cpp  IntervalTimer.h  Keyboard.h  MIDIUSB.h  MTP_Const.h  MTP_Storage.cpp  MTP_Storage.h  MTP_Teensy.cpp  MTP_Teensy.h  Makefile  Print.cpp  Print.h  (+121 more)
teensy4/avr/: eeprom.h  pgmspace.h
teensy4/debug/: printf.h
teensy4/util/: LastCall.h  crc16.h  delay.h  parity.h  usbHostRequestBuffer.cpp  usbHostRequestBuffer.h
teensy4/variants/: teensy_40.h  teensy_41.h  teensy_mm.h
usb_disk/: core_id.h  media_internal.c  media_sdcard.c  usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_flightsim/: core_id.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_hid/: core_id.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_midi/: core_id.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_mix_and_match/: core_id.h  defines.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_rawhid/: usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_serial/: usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_serial_hid/: core_id.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h
usb_serial_hid_no_joystick/: core_id.h  usb.c  usb_api.cpp  usb_api.h  usb_private.h
user/: main.cpp
